Add configuration loading and update repository settings
- Implemented load_config function to source settings from config/settings.conf.
- Updated README.md to reflect configurable repository and mirror URLs.
- Adjusted common.sh to use dynamic REPO_URL based on configuration.
- Modified utils.sh to utilize GITHUB_MIRROR_URL for network environment selection.

--- a/config/settings.conf
+++ b/config/settings.conf
@@ -7,6 +7,7 @@ DEFAULT_MODEL_ID="doubao-seed-1.6"
 
 # Repository settings
 COZE_REPO_URL="https://github.com/coze-dev/coze-studio.git"
+GITHUB_MIRROR_URL="https://ghfast.top"
 
 # Docker settings
 DOCKER_COMPOSE_PROFILE="*"
