Update GITHUB_MIRROR_URL handling in configuration files
- Modified settings.conf to clarify the need for a trailing slash in GITHUB_MIRROR_URL.
- Adjusted common.sh to set GITHUB_MIRROR_URL to an empty string if not configured.
- Updated utils.sh to concatenate GITHUB_MIRROR_URL and COZE_REPO_URL without a trailing slash for correct URL formation.

--- a/config/settings.conf
+++ b/config/settings.conf
@@ -7,7 +7,7 @@ DEFAULT_MODEL_ID="doubao-seed-1.6"
 
 # Repository settings
 COZE_REPO_URL="https://github.com/coze-dev/coze-studio.git"
-GITHUB_MIRROR_URL="https://ghfast.top"
+GITHUB_MIRROR_URL="https://ghfast.top/" #加速地址 ⚠️注意后面需要加/ Acceleration address ⚠️ note that/should be added after it
 
 # Docker settings
 DOCKER_COMPOSE_PROFILE="*"
